--------------------------------------------------------------------------
---------                Ampache -- CHANGELOG                    ---------   
--------------------------------------------------------------------------

--------------------------------------------------------------------------
  v.3.5
	- Make the Lang Install page prettier
	- Added Check for hash,inet_pton,windows PHP Version to init so
		that upgrades without pre-reqs are handled correctly
	- Allow mms,mmsh,mmsu,mmst,rstp in Radio Stream URLs
	- Fixed a problem where after adding a track to a saved playlist
		there was no UI response upon deleting the track without
		a page refresh
	- Fix an issue where the full version of the album art was never
		used even when requested
	- Fix maxlength on acl fields being to small for all IPv6 addresses
	- Add error message when file exists but is unreadable do not
		remove unreadable songs from catalog
	- Fixed missing title tag on song browse for the title 
		(Thx flowerysong)
	- Fix htmlchar'd rss feed url
	- Fix Port not correctly being added to URL in most cases
		even when defined in config
	

--------------------------------------------------------------------------
  v.3.5-Beta2 04/07/2009
	- Fix ASX playlists so more data shows up in WMP (Thx Jon611)
	- Fix dynamic playlist items so they work in stream methods again
	- Fixed Recently played so that it correctly shows unique songs
		with the correct data
	- Fix some issues with filenames with Multi-byte characters 
		(Thx Momo-i)
	- Add WMV/MPG specific parsing functions (Thx Momo-i)
	- Add text to /test.php for hash() and SHA256() support under PHP
		section
	- Fix SHA256 Support so that it references something that exists
	- Fix incorrect debug_event() on login due to typo
	- Remove manage democratic playlist as it has no meaning in the 
		current version
	- Run Dba::reset_db_charset() after upgrade incase people are playing
		hot potato with their charsets. 